result with no responsive design

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
-            href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap"
+            href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@400;600&display=swap"
             rel="stylesheet"
         />
         <link
@@ -25,8 +25,11 @@
         </section>
         <article>
             <div class="left">
-                <img src="images/illustration-mockups.svg" alt="Mockup" />
-                <!-- asdf -->
+                <img
+                    class="mockup"
+                    src="images/illustration-mockups.svg"
+                    alt="Mockup"
+                />
             </div>
             <div class="right">
                 <p class="title"><b>Build The Community</b></p>
@@ -36,8 +39,21 @@
                     voice, but so does your audience. Create connections with
                     your users as you engage in genuine discussion.
                 </p>
-                <button type="button">Register</button>
+                <button type="button"><b>Register</b></button>
             </div>
         </article>
+        <footer>
+            <p class="attribution">
+                Challenge by
+                <a
+                    href="https://www.frontendmentor.io?ref=challenge"
+                    target="_blank"
+                    >Frontend Mentor</a
+                >. Coded by
+                <a href="https://github.com/BenedictusKent" target="_blank"
+                    >Benedictus Kent Chandra</a
+                >.
+            </p>
+        </footer>
     </body>
 </html>
