--- a/index.html
+++ b/index.html
@@ -20,28 +20,29 @@
         <title>Huddle</title>
     </head>
     <body>
-        <section>
-            <img src="images/logo.svg" alt="Huddle Logo" />
+        <header class="container">
+            <img src="images/logo.svg" alt="Huddle logo" />
+        </header>
+        <section class="container">
+            <div class="split">
+                <div class="center">
+                    <img
+                        src="images/illustration-mockups.svg"
+                        alt="Page mockup"
+                    />
+                </div>
+                <div class="center">
+                    <h1>Build The Community<br />Your Fans Will Love</h1>
+                    <p>
+                        Huddle re-imagines the way we build communities. You
+                        have a voice, but so does your audience. Create
+                        connections with your users as you engage in genuine
+                        discussion.
+                    </p>
+                    <button>Register</button>
+                </div>
+            </div>
         </section>
-        <article>
-            <div class="left">
-                <img
-                    class="mockup"
-                    src="images/illustration-mockups.svg"
-                    alt="Mockup"
-                />
-            </div>
-            <div class="right">
-                <p class="title"><b>Build The Community</b></p>
-                <p class="title"><b>Your Fans Will Love</b></p>
-                <p class="text">
-                    Huddle re-imagines the way we build communities. You have a
-                    voice, but so does your audience. Create connections with
-                    your users as you engage in genuine discussion.
-                </p>
-                <button type="button"><b>Register</b></button>
-            </div>
-        </article>
         <footer>
             <p class="attribution">
                 Challenge by
